# gpt2-function-calling

./: .amlignore  .gitignore  README.md  pyproject.toml
.github/workflows/: pages.yml
cloud/: colab_train.ipynb  kaggle_eval.ipynb  kaggle_train.ipynb
cloud/azure/: conda.yml  job.yml  setup.sh  submit.sh
demo/: README.md  app.py  requirements.txt
docs/: index.html
notebooks/: 01_data.ipynb  02_architecture.ipynb  03_training.ipynb  mycode.py
results/: metrics-355M-full.json  metrics-355M.json
src/gpt2fc/: __init__.py  config.py
src/gpt2fc/inference/: chat.py  evaluate.py  generate.py  parser.py
src/gpt2fc/model/: __init__.py  attention.py  gpt2.py  layers.py  pretrained.py
src/gpt2fc/training/: data.py  train.py
tests/: test_config.py  test_data.py  test_generate.py  test_kv_cache.py  test_model.py  test_parser.py
